<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <TextView
    android:id="@+id/top_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:lines="2"
    android:text="@string/drag_marker"/>
  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">
    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_vertical">
      <TextView
        android:text="@string/speed"/>
      <SeekBar
        android:id="@+id/speedSeekBar"/>
    </TableRow>
  </TableLayout>
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<com.mapquest.android.maps.MapView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/map"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:clickable="true"
    />
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      android:background="#D000"
      android:orientation="vertical"
      android:padding="5dp">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.25"
          android:onClick="onClearMap"
          android:text="@string/clear_map"/>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.25"
          android:onClick="onResetMap"
          android:text="@string/reset_map"/>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.25"
          android:onClick="onRoute"
          android:text="@string/route"/>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.25"
          android:onClick="onStartMap"
          android:text="@string/start_map"/>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.25"
          android:onClick="onStopMap"
          android:text="@string/stop_map"/>
        </LinearLayout>
    </LinearLayout>
  </FrameLayout>
</LinearLayout>
